syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
package org.distributed.stubs;

message RequestVoteRPC {
  int64 term = 1;
  string candidateId = 2;
  int32 lastLogIndex = 3;
  int64 lastLogTerm = 4;
}

message ResponseVoteRPC {
  int64 term = 1;
  bool voteGranted = 2;
}

message RequestAppendEntriesRPC {
  message LogEntry {
    int32 index = 1;
    int64 term = 2;
    string command = 3;
  }
  int64 term = 1;
  string leaderId = 2;
  int32 prevLogIndex = 3;
  int64 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  int32 leaderCommit = 6;
}
message ResponseAppendEntriesRPC {
  int64 term = 1;
  bool success = 2;
}

// The VoteService service definition.
service VoteService {
  // send requestVote
  rpc requestVote (RequestVoteRPC) returns (ResponseVoteRPC) {}
}

service AppendEntriesService {
// get replica health
  rpc appendEntries (RequestAppendEntriesRPC) returns (ResponseAppendEntriesRPC) {}
}

